# astar-fuzzer

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: invariants_check.rs  main.rs  process_input.rs  utils.rs
