[package]
name = "astar-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env_logger = "0.10"
ziggy = { version = "1.3.2", default-features = false }
log = { version = "0.4.27", default-features = false }
serde_json = { version = "1.0.132", default-features = false }

astar-runtime = { git = "https://github.com/AstarNetwork/Astar", tag = "runtime-1601" }
astar-primitives = { git = "https://github.com/AstarNetwork/Astar", tag = "runtime-1601" }
fp-evm = { git = "https://github.com/AstarNetwork/frontier", rev = "e74325d1b2150a6e505c20a4190236db4daca2bb", default-features = false }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }

sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }

pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-dapp-staking = { git = "https://github.com/AstarNetwork/Astar", tag = "runtime-1601", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-treasury = { git = "https://github.com/AstarNetwork/Astar", tag = "runtime-1601", default-features = false }

sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }

codec = { package = "parity-scale-codec", version = "3.7.4", features = [
  "derive",
] }

[features]
default = ["std", "try-runtime"]
std = [
  "codec/std",
  "sp-runtime/std",
  "frame-support/std",
  "pallet-timestamp/std",
  "astar-runtime/std",
  "pallet-dapp-staking/std",
  "astar-primitives/std",
  "fp-evm/std",
  "sp-consensus-babe/std",
  "pallet-utility/std",
  "pallet-multisig/std",
  "pallet-proxy/std",
  "pallet-collective/std",
  "pallet-contracts/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-parachain-inherent/std",
  "cumulus-test-relay-sproof-builder/std",
]
try-runtime = [
  "astar-runtime/try-runtime",
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-dapp-staking/try-runtime",
  "pallet-treasury/try-runtime",
]
